--- a/shixunyun_pc/package.json
+++ b/shixunyun_pc/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "less-loader": "^6.0.0",
+    "qs": "^6.9.4",
     "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
